@@ -143,7 +143,6 @@ These are classes for components.
 @import 'components/messages.capability';
 @import 'components/messages.status';
 @import 'components/header';
-@import 'components/search-bar';
 @import 'components/progressbar';
 @import 'components/summary';
 @import 'components/whats-new';
