@@ -118,6 +118,7 @@ This feature was developed by Sage Abdullah.
  * Update `tsconfig` to better support modern TypeScript development and clean up some code quality issues via Eslint (Loveth Omokaro)
  * Switch userbar to initialise a Web Component to avoid styling clashes (Albina Starykova)
  * Refactor userbar stylesheets to use the same CSS loading as the rest of the admin (Albina Starykova)
+ * Remove unused search-bar and button-filter styles (Thibaud Colas)
 
 ## Upgrade considerations
 
