@@ -1,4 +1,0 @@
-{% load wagtailadmin_tags %}
-<li class="{% if field.field.required %}required{% endif %} {% if field.errors %}error{% endif %}">
-    {% include "wagtaildocs/documents/_file_field.html" %}
-</li>
