@@ -29,7 +29,7 @@
 
     <div class="nice-padding">
         {% if collections %}
-            <form class="image-search search-bar" action="{% url 'wagtaildocs:index' %}" method="GET" novalidate>
+            <form class="image-search" action="{% url 'wagtaildocs:index' %}" method="GET" novalidate>
                 <ul class="fields">
                     <li>{% include "wagtailadmin/shared/collection_chooser.html" %}</li>
                 </ul>
